WOW een $ toegevoegd xDD

--- a/src/main/webapp/WEB-INF/i18n/application.properties
+++ b/src/main/webapp/WEB-INF/i18n/application.properties
@@ -148,3 +148,19 @@ label_error_400=Bad request
 
 # format patterns
 date_format_pattern=yyyy-MM-dd
+
+#delivery view
+label_header_address = Insert you address
+label_header_person = Contact information
+label_form_address = Address
+label_form_zip = Zipcode
+label_form_city = City
+label_form_fName = First Name
+label_form_lName = Last Name
+label_form_phone = Telephone 
+label_form_mail = E-mail
+label_button_submit = Send order
+label_item_name = Item
+label_item_price = Price
+label_item_total = Total:
+ 
