--- a/src/main/webapp/WEB-INF/i18n/application_nl_NL.properties
+++ b/src/main/webapp/WEB-INF/i18n/application_nl_NL.properties
@@ -136,3 +136,18 @@ label_error_400=Bad request
 
 # format patterns
 date_format_pattern=yyyy-MM-dd
+
+#delivery view
+label_header_address = Voer je adresgegevens in
+label_header_person  Hoe ben je te bereiken?
+label_form_address = Adres
+label_form_zip = Postcode
+label_form_city = Stad
+label_form_fName = Voornaam
+label_form_lName = Achternaam
+label_form_phone = Telefoon 
+label_form_mail = E-mail
+label_button_submit = Verstuur rekening en betaal
+label_item_name = Menu Item
+label_item_price = Prijs
+label_item_total = Totaal:
